--- a/chapter9_exercise.css
+++ b/chapter9_exercise.css
@@ -70,3 +70,25 @@ footer{
   height:50px;
   background-color:#AAAAAA;
 }
+
+@media screen and (max-width:768px){
+  header{
+    width:100%;
+  }
+
+  main{
+    width:100%;
+    padding-right:10px;
+    padding-left:10px;
+    display:block;
+  }
+
+  .step-box{
+    width:90%;
+    margin:20px;
+  }
+
+  footer{
+    width:100%;
+  }
+}
